--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-gray-50">
+<div class="min-h-screen" style="background:#F1F5F9">
   @if (auth.isAuthenticated()) {
     @if (isMobile()) {
       <app-bottom-nav />
